# acip

./: .deploy-stamp  .env.example  .gitignore  .system  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  MANIFEST.md  MANIFEST_EP0101.md  PROJECT.md  README.md  README_AGENT_ORCHESTRATOR_PACK.md  README_AGENT_OS_PACK.md  README_ASSET_LIFECYCLE_PACK.md  README_ASSET_PRODUCTION_OPERATIONS_PACK.md  README_AUTOMATION_PACK.md  README_EP0003.md  README_EP0100_2_AGENT_RUNTIME_RESTORE_IMPORT_FIX.md  README_EP0100_AGENT_RUNTIME_MVP.md  README_EP0101_AGENT_RUNTIME_TASK_INTAKE.md  README_EP0102_CODEX_DEVELOPMENT_PIPELINE.md  README_EP0106_QUEUE_STATE_TRANSITION_ENGINE.md  README_GOVERNANCE.md  README_REPOSITORY_COMPLETE_PACK.md  README_REPOSITORY_KNOWLEDGE_GRAPH_RUNTIME_INTEGRATION_PACK.md  README_RUNTIME_TRANSITION_READINESS_PACK.md  README_SELFTEST_IMPORT_FIX_PACK.md  README_SEMANTIC_SELFTEST_V2_PACK.md  ROADMAP.md  STATE.md  VERSION  adr  app  app.js  archive  baseline  basis  context  contracts  (+19 more)
platform/app/tools/somia_dataset_generator/: .gitignore  AGENTS.md  README.md  VERIFICATION.md  pyproject.toml
platform/app/tools/somia_dataset_generator/basis/: WBS.md  architecture.md  decision_log.md  policy.md  system_spec.md
platform/app/tools/somia_dataset_generator/config/: runtime.yaml
platform/app/tools/somia_dataset_generator/somia_dataset_generator/: cli.py  config.py  exporter.py  models.py  openai_adapter.py  paths.py  planner.py  prompt_builder.py  run.py  storage.py  validate_run.py  validation.py
platform/app/tools/somia_dataset_generator/tests/: test_cli.py  test_paths.py  (+12 more)
(+3834 files in other folders)
