[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "somia-dataset-generator"
version = "1.1.0"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
  "PyYAML>=6.0",
  "jsonschema>=4.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
somia-dataset = "somia_dataset_generator.cli:main"

[tool.setuptools.packages.find]
include = ["somia_dataset_generator*"]
exclude = ["basis*", "config*", "schemas*", "specs*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
