[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "somia-dataset-generator"
version = "1.3.0"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
  "PyYAML>=6.0",
  "jsonschema>=4.0",
  "Pillow>=10.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5", "build>=1.0"]

[project.scripts]
somia-dataset = "somia_dataset_generator.cli:main"

[tool.setuptools.packages.find]
include = ["somia_dataset_generator*"]
exclude = ["basis*", "tests*"]

[tool.setuptools.package-data]
somia_dataset_generator = ["specs/**/*.yaml", "schemas/*.json", "config/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
